@@ -8232,3 +8232,6 @@ EPRINTS-3.1-beta-2
 
 2009-05-17 cjg
  * Fixed broken call in cgi/rest
+
+2009-05-17 sf
+ * Fixed file corruption problem on SWORD + removed some commnents
